0.6.0 - 2009-05-18
 * Added Solaris service scripts (Trond Norbye).
 * Fixed rpm building (make rpm).
 * Removed AI_V4MAPPED for client/worker connect lookup, not fully
   supported in all operating systems (like FreeBSD, bug #373060).
 * Support for gearmand to bind to multiple addresses.
 * Protocol document updates and fixes (Eric Day, Eric Herman)
 * Bind to specific hostname in gearmand (Brian Moon).
 * Minor cleanup and fixes.

0.5 - 2009-04-22
 * Threaded Gearman job server (gearmand).
 * More options to gearmand.
 * OSX bug fixes related to poll().
 * Fix for bug #357881.
 * Man page rework.

0.4 - 2009-03-30
 * New protocol additions such as UNIQ grab and assign for workers.
 * Support for high priority background jobs (Brian Moon).
 * Support for low priority jobs.
 * New priority queue in server to support new protocol options.
 * Reworked the unique ID checking in server.
 * Added hooks to aid in client memory cleanup.
 * Added gearman command line utility to allow you to use clients and
   workers from the shell.
 * Build fixes (Monty Taylor).
 * Basic init script added.
 * Fixed getopt bugs with variable type and EOF.

0.3 - 2009-02-05
 * Fixed I/O wait bug in packet parse.
 * Switched to different autoconf library detection method.
 * Added detach option to gearmand, can now run in background.
 * Reworked much of the client code for better concurrency and efficiency.
 * Added benchmark utilities.
 * Added man pages.
 * Changed port to new IANA assigned port, 4730.

0.2 - 2009-01-16
 * Improved gearmand efficiency by tracking events and reducing syscalls.
 * Reworked most of the worker code, it now reconnects to the job server.
 * Added version/bugreport options to gearmand (Brian Moon).
 * Fixed bug #315652, libevent usage.

0.1 - 2009-01-08
 * First release.