@@ -392,8 +392,9 @@ typedef enum
  */
 typedef enum
 {
-  GEARMAN_SERVER_ALLOCATED=   (1 << 0),
-  GEARMAN_SERVER_PROC_THREAD= (1 << 1)
+  GEARMAN_SERVER_ALLOCATED=    (1 << 0),
+  GEARMAN_SERVER_PROC_THREAD=  (1 << 1),
+  GEARMAN_SERVER_QUEUE_REPLAY= (1 << 2)
 } gearman_server_options_t;
 
 /**
@@ -545,7 +546,8 @@ typedef gearman_return_t (gearman_queue_done_fn)(gearman_st *gearman,
                                                  size_t unique_size);
 typedef gearman_return_t (gearman_queue_replay_fn)(gearman_st *gearman,
                                                    void *fn_arg,
-                                                  gearman_queue_add_fn *add_fn);
+                                                   gearman_queue_add_fn *add_fn,
+                                                   void *add_fn_arg);
 
 /** @} */
 
